# Algo

./: BiTree.c  CMakeLists.txt  README.md  bs.h  bubbleSort.c  countingSort.c  cs.h  functions.c  functions.h  heapSort.c  hs.h  insertionSort.c  is.h  main.c  mergeSort.c  quickSort.c  sortformat.txt
h/: bs.h  bt.h  functions.h  hs.h  ms.h  qs.h
sort/: bubbleSort.c  countingSort.c  heapSort.c  mergeSort.c  quickSort.c
